sass/components/_body.scss
body {
  margin: 0px;
  background-color: $pink-light;
  overflow-x: hidden;
}

.page-content {
  &__above-fold {
    @include default-margin();
    margin-bottom: 50px;
  }

  @media only screen and (min-width: $break-desktop) {
    max-width: none;

    &__above-fold {
      display: flex;
      margin-top: 50px;
      justify-content: center;
    }
  }
}

svg {
  display: block;
}

